[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kahn-queue"
version = "0.1.1"
description = "Kahn-style ready-queue for dependency scheduling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["dag", "scheduler", "workflow", "kahn"]

[project.urls]
Homepage = "https://github.com/Flashlock/kahn-queue"
Repository = "https://github.com/Flashlock/kahn-queue"

# Layout: packages under src/ plus top-level modules (dag, scheduler, …).
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["dag", "scheduler", "exception", "tracker"]
