[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kahn-queue"
version = "1.0.0"
description = "Lightweight Kahn-based ready queue for dependency-driven scheduling and workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
  "kahn queue",
  "kahn-style scheduler",
  "topological sort queue",
  "dynamic topological sort",
  "ready queue",
  "dependency scheduler",
  "dag scheduler",
  "incremental topological sort",
  "agent orchestration",
  "parallel task scheduling",
  "deterministic scheduler",
]

[project.urls]
Homepage = "https://flashlock.github.io/kahn-queue/"
Repository = "https://github.com/Flashlock/kahn-queue"

# Layout: packages under src/ plus top-level modules (dag, scheduler, …).
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["dag", "scheduler", "exception", "tracker"]
